# poeta

./: .gitignore  README.md  pyproject.toml
poeta/: config  main.py
poeta/src/: __init__.py  poeta.py  run_cmd.py  screen.py
